<resources>
    <string name="app_name">ARAPP</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="webclientid_google" translatable="false">1099249716618-1k90h5vtj66n4h82apdshf9sinjkv4i6.apps.googleusercontent.com</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="loading">Iniciando sesión</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="login_title">ARAPP</string>
    <string name="disconnect">Disconnect</string>
    <string name="sign_out">Sign Out</string>
    <string name="model_3d"></string>
    <string name="button">Button</string>
    <string name="logo_app">logo-app</string>
    <string name="icon_name">app_icon</string>
    <string name="showModel">Proyectar modelo</string>
    <string name="accessDenied">El usuario no tiene acceso.</string>
    <string name="view_model_button">Proyectar Modelo</string>
    <string name="getting_model_files">Obteniendo archivos del modelo</string>
    <string name="obtain_model_list">Obteniendo lista de modelos</string>
    <string name="list_users">Listar Usuarios</string>
    <string name="list_enterprises">Listar Empresas</string>
    <string name="add_enterprise">Agregar empresa</string>
    <string name="modify_enterprise">Modificar empresa</string>
    <string name="modify_user">Modificar usuario</string>
    <string name="username_required">Texto requerido</string>
    <string name="enterpriseNameTextView">Nombre</string>
    <string name="enterpriseNameInput">Nombre de Empresa</string>
    <string name="title_activity_administration">AdministrationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_contact">Contacto</string>

    <string name="menu_principal">Inicio</string>
    <string name="mainText">Bienvenido a ARAPP</string>
    <string name="subMainText">Esta es una aplicación creada para prestar un apoyo y una manera más
    fácil de presentar los modelos de los proyectos de una empresa inmobiliarias.</string>

    <string name="menu_dataEnterprise">Datos Empresa</string>
    <string name="enterpriseName">Nombre empresa :</string>
    <string name="enterpriseRut">RUT Empresa: </string>
    <string name="legalRepresentant">Representante legal: </string>
    <string name="region">Región :</string>
    <string name="comuna">Comuna: </string>
    <string name="address">Dirección: </string>

    <string name="menu_models_house">Modelos Casas</string>
    <string name="menu_models_department">Modelos Departamentos</string>

    <string name="todo">arapp_logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="title_activity_choose_model">ChooseModelActivity</string>
    <string name="tab_text_1">Casas</string>
    <string name="tab_text_2">Departamentos</string>
</resources>
