<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/cardUserData"
        tools:ignore="InvalidId"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:src="@drawable/arapp"
                android:id="@+id/profilePhoto"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="8dp"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textAppearance="?attr/textAppearanceHeadline1"
                android:id="@+id/mainText"
                android:text="@string/mainText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="20sp"
                android:id="@+id/subMainText"
                android:text="@string/subMainText"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>